# clawview

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SNIFFLY_DATA_ANALYSIS_REFERENCE.md  go.mod  hello.py  main.go  pyproject.toml
.claude/skills/heroui/: SKILL.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: ErrorBoundary.tsx  Header.tsx  MemorySidebar.tsx  ProjectBox.tsx  SessionCard.tsx  Sidebar.tsx  SkillSidebar.tsx  StatusIndicator.tsx  index.ts
frontend/src/components/insights/: ChartCard.tsx  CommandAnalysisChart.tsx  CommandComplexityChart.tsx  CommandLengthChart.tsx  CommandsTable.tsx  DailyCostChart.tsx  ErrorDistributionChart.tsx  ErrorRateChart.tsx  HourlyTokenChart.tsx  InsightsPanel.tsx  InterruptionRateChart.tsx  McpUsageChart.tsx  ModelUsageChart.tsx  StatCards.tsx  SubAgentSkillChart.tsx  TokenOverTimeChart.tsx  ToolCategoryChart.tsx  ToolTrendsChart.tsx  ToolUsageChart.tsx  dynamicInterval.ts  index.ts
frontend/src/components/metadata/: ClientBadge.tsx  ContextMeter.tsx  GitBranchBadge.tsx  MemoryBadge.tsx
frontend/src/components/session/: ConversationTimeline.tsx  SessionContent.tsx  SkillsSubagentsSection.tsx  StatBox.tsx  TaskNotificationContent.tsx  TeammateColumn.tsx  TeammatePanel.tsx  ToolBarList.tsx  TurnCard.tsx  (+2 more)
frontend/src/hooks/: index.ts  useInsights.ts  useMemoryFiles.ts  useSessionDetail.ts  useWebSocket.ts  useWebSocketConnection.ts
frontend/src/pages/: Dashboard.tsx  InsightsPage.tsx  NotFoundPage.tsx  ProjectInsightsPage.tsx  SessionDetailPage.tsx
frontend/src/utils/: clientIcon.tsx  icons.tsx  index.ts
internal/sessions/: ide_test.go  sessions.go
ralph/: .last-branch  prd.json  progress.txt
src/clawhawk/: __main__.py  app.py  insights.py  models.py  sessions.py  ws.py
src/clawlens/: __main__.py  app.py  ide.py  insights.py  models.py  sessions.py  stats.py  ws.py
src/clawview/: __main__.py  app.py  insights.py  models.py  pricing.py  sessions.py  stats.py  ws.py
tests/: test_insights.py  test_pricing.py  test_sessions.py  test_stats.py
web/: embed.go
(+9 files in other folders)
