[project]
name = "clawhawk"
version = "0.1.0"
description = "Real-time dashboard for monitoring Claude Code sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=15.0",
]

[project.scripts]
clawhawk = "clawhawk.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawhawk"]
