[project]
name = "clawview"
version = "0.1.0"
description = "Real-time dashboard for monitoring Claude Code sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Tuong Nguyen", email = "tuongaz@gmail.com" }]
keywords = ["claude", "claude-code", "dashboard", "monitoring", "sessions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=15.0",
]

[project.urls]
Homepage = "https://github.com/tuongaz/clawview"
Repository = "https://github.com/tuongaz/clawview"
Issues = "https://github.com/tuongaz/clawview/issues"

[project.scripts]
clawview = "clawview.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawview"]

[tool.hatch.build.targets.wheel.force-include]
"src/clawview/web" = "clawview/web"

[tool.hatch.build.targets.sdist.force-include]
"src/clawview/web" = "src/clawview/web"

[tool.uv.workspace]
members = ["clawview"]
